# AndroidMultiMedia

./: .gitignore  README.md  build.gradle  build_fdk.sh  build_ffmpeg.sh  build_x264.sh  gradle.properties  settings.gradle
app/: CMakeLists.txt  TEMP.md  build.gradle
app/src/androidTest/java/com/wangheart/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/wangheart/ffmpegdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangheart/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
rtmpfile/: Article.md  CMakeLists.txt  build.gradle
rtmpfile/src/androidTest/java/com/wangheart/rtmpfile/: ExampleInstrumentedTest.java
rtmpfile/src/main/: AndroidManifest.xml
rtmpfile/src/main/cpp/: common.cpp  common.h  ffmpeg_audio_handle.cpp  ffmpeg_audio_handle.cpp.cpp  ffmpeg_handle.cpp  ffmpeg_rtmp.cpp  rtmp_handle.cpp
rtmpfile/src/main/java/com/wangheart/rtmpfile/: AudioCodecActivity.java  AudioFormatChangeFFmpegActivity.java  AudioRecordActivity.java  AudioRecordFFmpegActivity.java  AudioRecordMediaCodecActivity.java  CameraActivity.java  CameraFFmpegPushRtmpActivity.java  CameraInterface.java  CameraMediaCodecActivity.java  CameraMediaCodecFileActivity.java  CameraMediaCodecRtmpActivity.java  FFmpegPushFileRtmpActivity.java  MainActivity.java  MyApplication.java  MySurfaceView.java  PermissionsActivity.java  PushFileRtmpActivity.java  RtmpDumpFileActivity.java  VideoCompoundFileActivity.java  VideoFileRtmpFFmpegActivity.java  VideoFileRtmpRtmpDumpActivity.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/audio/: AudioBuffer.java  AudioCodec.java  FFmpegAudioHandle.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/camera/: CameraInterface.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/device/: AudioRecordController.java  CameraController.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/ffmpeg/: FFmpegHandle.java  PushCallback.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/flv/: AnnexbHelper.java  FlvPacker.java  FlvPackerHelper.java  Packer.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/flv/amf/: AmfArray.java  AmfBoolean.java  AmfData.java  AmfDecoder.java  AmfMap.java  AmfNull.java  AmfNumber.java  AmfObject.java  AmfString.java  AmfType.java  AmfUndefined.java  Util.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/listener/: OnCompleteListener.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/rtmp/: RtmpHandle.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/utils/: ADTSUtils.java  BytesHexStrTranslate.java  FileUtil.java  IOUtils.java  ImageUtil.java  LogUtils.java  PermissionsChecker.java  PhoneUtils.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/video/: AudioComponent.java  AudioConfig.java  EncodedDataCallback.java  SourceDataCallback.java  VideoComponent.java  VideoConfig.java
rtmpfile/src/main/java/com/wangheart/rtmpfile/view/: MySurfaceView.java
rtmpfile/src/main/res/layout/: activity_audio_codec.xml  activity_audio_record.xml  activity_audio_record_ffmpeg.xml  activity_camera.xml  activity_main.xml  activity_push_file_rtmp.xml  activity_rtmpdump_file.xml  activity_video_compound_file.xml
rtmpfile/src/main/res/values/: strings.xml  styles.xml
rtmpfile/src/test/java/com/wangheart/rtmpfile/: ExampleUnitTest.java
